[gd_scene load_steps=6 format=3 uid="uid://h0u5x6hainfj"]

[ext_resource type="Script" path="res://controller_menu.gd" id="1_0357q"]
[ext_resource type="PackedScene" uid="uid://bai4imjsdmppf" path="res://loading_indicator.tscn" id="1_kmit7"]
[ext_resource type="Theme" uid="uid://bp875cfs57g2y" path="res://default.tres" id="1_r4ky1"]
[ext_resource type="PackedScene" uid="uid://coa7lk0pbadyx" path="res://error_indicator.tscn" id="3_556qe"]
[ext_resource type="PackedScene" uid="uid://yudr08q446fu" path="res://hand_control.tscn" id="5_wcspt"]

[node name="ControllerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r4ky1")
script = ExtResource("1_0357q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingIndicator" parent="Panel" instance=ExtResource("1_kmit7")]
layout_mode = 1
offset_left = -149.5
offset_top = -184.0
offset_right = 149.5
offset_bottom = 184.0

[node name="ErrorIndicator" parent="Panel" instance=ExtResource("3_556qe")]
visible = false
layout_mode = 1

[node name="BackButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -36.0
offset_right = 4.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="HandControlAnchor" type="Control" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HandControl" parent="Panel/HandControlAnchor" instance=ExtResource("5_wcspt")]
scale = Vector2(0.75, 0.75)

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="finger_moved" from="Panel/HandControlAnchor/HandControl" to="." method="_on_hand_control_finger_moved"]
